# hwcaps-loader

./: .buildconfig  Cargo.toml  README.md  build.rs  meson.build  meson_options.txt
.cargo/: config.toml
docs/: FOR_DISTRIBUTORS.md  SUPPORTED_TARGETS.md
helpers/empty_binary/: Cargo.toml  main.rs
src/: logging.rs  main.rs  mem_alloc.rs  meson.build  output.rs  sys.rs  wrapper.h
src/capabilities/: arch_x86.rs  mod.rs
src/entry_point/: arch_x86.rs
src/init/: arch_x86.rs  mod.rs
src/path/: arch_generic.rs  arch_x86.rs  mod.rs
