[workspace]
members = [ "helpers/empty_binary" ]

[package]
name = "hwcaps-loader"
version = "0.3.0"
edition = "2021"

[profile.dev]
panic = "abort"
lto = "fat" # https://github.com/rust-lang/rust/issues/47493#issuecomment-606385776

[profile.release]
panic = "abort"
lto = "fat" # https://github.com/rust-lang/rust/issues/47493#issuecomment-606385776
strip = "symbols"
codegen-units = 1
#opt-level = "z"

[dependencies]
bitflags = { version = "2" }
syscalls = { version = "0.6", default-features = false }

[features]
default = [ "self_execution_check", "error_output" ]
self_execution_check = []
error_output = []